# enviroplus_logger

./: README.md  app.py  pyproject.toml
app/: app_stack.py
config/: enviroplus.service  garafana_model.json  grafana_db.json
enviroLambda/: lambda_function.py
enviroplus_logger/: enviroplus_logger.py
tests/: test_app_stack.py  test_enviroplus_logger.py
