[tool.poetry]
name = "enviroplus-logger"
version = "0.1.0"
description = "Simple logger of environmental data with Enviro+ hardware"
authors = ["Ozan Sahin", "Hakan Kirdas"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.2"
enviroplus = "^0.0.6"
boto3 = "^1.34.7"
aws-cdk-lib = "2.122.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.9"
black = "^23.12.1"
pylint = "^3.0.3"
pytest = "^7.4.4"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
